--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -17,7 +17,7 @@
     border-bottom: 5px solid $main-colour;
     overflow: hidden;
     
-    margin: 2em;
+    margin: 2em 2em 4em 2em;
     
     p {
       width: 51%;
