Fix links of the form http://gov.uk
Changed to https://www.gov.uk

--- a/_layouts/role-index-designers.html
+++ b/_layouts/role-index-designers.html
@@ -22,7 +22,7 @@ section_class: wide role-index
 <div class="article-container">
   <div class="primary-links">
     <div class="hero link-list">
-        <a href="http://gov.uk/designprinciples">
+        <a href="https://www.gov.uk/designprinciples">
           <h3>GOV.UK design principles</h3>
           <p>Ten principles that should inform all you design for GOV.UK</p>
         </a>
