--- a/_includes/_head.assets.html
+++ b/_includes/_head.assets.html
@@ -75,3 +75,4 @@
 </script>
 
 <script src="/service-manual/assets/javascript/caveat-notice.js" type="text/javascript"></script>
+<script src="/service-manual/assets/javascript/toggler.js" type="text/javascript"></script>
