--- a/_layouts/role-index-content-designer.html
+++ b/_layouts/role-index-content-designer.html
@@ -32,13 +32,13 @@ section_class: wide role-index
     <div class="link-list wide">
       <h3>Guides</h3>
       <ul>
-      {% for p in site.pages %}
+      {% sorted_for p in site.pages sort_by:title %}
         {% if p.audience.primary contains page.audience and (p.type == 'guide' or p.type == 'resource') and p.title != page.hero %}
         <li> 
             <a href="{{ p.url }}">{{ p.title }}</a>
         </li>
         {% endif %}
-      {% endfor %}
+      {% endsorted_for %}
       </ul>
     </div>
 
@@ -48,14 +48,14 @@ section_class: wide role-index
   <div class="link-list more-guides">
     <h3>More guides from the manual</h3>
     <ul>
-    {% for p in site.pages %}
+    {% sorted_for p in site.pages sort_by:title %}
       {% if p.audience.secondary contains page.audience %}
       <li> 
           <a href="{{ p.url }}" title="{{ p.subtitle }}">{{ p.title }}</a>
           <span class="subtitle">{{ p.subtitle }}</span>
       </li>
       {% endif %}
-    {% endfor %}
+    {% endsorted_for %}
     </ul>
   </div>
 {% endif %}
