--- a/service-manual/assets/stylesheets/helpers/_page-header.scss
+++ b/service-manual/assets/stylesheets/helpers/_page-header.scss
@@ -1,20 +1,24 @@
-  header.page-header {
+header.page-header {
+  margin: 1em 1em 3em 1em;
+  padding: 0 0 2em 0;
+  border-bottom: 5px solid $main-colour;
+
+  @include media(desktop) {
     margin: 1em 2em 3em 2em;
-    padding: 0 0 2em 0;
-    border-bottom: 5px solid $main-colour;
+  }
 
-    hgroup {
-      padding: 0;
+  hgroup {
+    padding: 0;
 
-      h1 {
-        @include bold-48;
-        color: $text-colour;
-      }
+    h1 {
+      @include bold-48;
+      color: $text-colour;
+    }
 
-      h2.subtitle{
-        margin: 0;
-        color: $secondary-text-colour;
-        @include core-24;
-      }
+    h2.subtitle{
+      margin: 0;
+      color: $secondary-text-colour;
+      @include core-24;
     }
   }
+}
