--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -11,3 +11,4 @@
 <script defer src="{{ page.js }}" type="text/javascript"></script>
 {% endif %}
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
