Hide bullets on phases list in IE7

--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -127,7 +127,10 @@
 
   // Phases
   .phases {
-    list-style: none;
+    list-style: none;  
+    @include ie-lte(7) { 
+      list-style-image: none;
+    }
     padding: 0;
 
     li {
