--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -14,12 +14,11 @@
 
   .dbd-promo {
     border-bottom: 5px solid $main-colour;
-    overflow: hidden;
-    
+    overflow: hidden;  
     margin: 2em 1em;
 
     @include media(desktop) {
-      margin: 2em;
+      margin: 0.5em 2em 2em 2em;
     }
     
     p {
@@ -29,7 +28,7 @@
       @include core-24;
 
       @include media(tablet) {
-        width: 50%;
+        width: 49%;
       }
     }
     
@@ -44,7 +43,7 @@
 
         a {
           display: block;
-          padding: 1.5em 0 0 1em;
+          padding: 1em 0 0 1em;
         }
       }
 
