Add history/source links to detailed guidance template

--- a/_layouts/detailed-guidance.html
+++ b/_layouts/detailed-guidance.html
@@ -23,6 +23,14 @@ section_class: detailed-guidance
 
         {{ page.content | toc_list }}
       </nav>
+
+      <nav class="page-tools">
+        <ol>
+        <li><a title="View the page history on GitHub" href="https://github.com/alphagov/government-service-design-manual/commits/master{{ page.url | replace:'.html','.md' }}">Page history</a>
+        <li><a title="View and suggest changes to the page source on GitHub" href="https://github.com/alphagov/government-service-design-manual/blob/master{{ page.url | replace:'.html','.md' }}">Page source</a>
+        </ol>
+      </nav>
+
     </div>
 
     <div class="inner">
