Responsive layout updates for role index pages

--- a/service-manual/assets/stylesheets/views/_role-index.scss
+++ b/service-manual/assets/stylesheets/views/_role-index.scss
@@ -26,10 +26,33 @@
     }
 
     .link-list {
+      @include media(tablet) {
+        width: 50%;
+      }
+
+      @include media(desktop) {
+        width: (100%/3);
+      }
+
       li {
         a {
           display: inline;
           width: auto;
+        }
+      }
+
+      @include media(desktop) {
+        // Run lists over two columns
+        &.wide {
+          width: 66.5%;
+          li {
+            display: inline-block;
+            width: 48.3%;
+
+            &:nth-child(odd){
+              margin-right: 1em;
+            }
+          }
         }
       }
     }
@@ -50,21 +73,6 @@
 
   .link-list {
     border-bottom: 0;
-
-    @include media(desktop) {
-      // Run lists over two columns
-      &.wide{
-        width: 66.5%;
-        li{
-          display: inline-block;
-          width: 48.3%;
-
-          &:nth-child(odd){
-            margin-right: 1em;
-          }
-        }
-      }
-    }
 
     // Big blocky version for hero promo
     &.hero{
@@ -109,6 +117,10 @@
 
   .role-links {
     margin-bottom: 2em;
+
+    @include media(tablet) {
+      
+    }
   }
 
   .all-guides {
