--- a/service-manual/assets/stylesheets/helpers/_breadcrumbs.scss
+++ b/service-manual/assets/stylesheets/helpers/_breadcrumbs.scss
@@ -14,3 +14,11 @@
     padding: 0;
   }
 }
+
+#global-breadcrumb{
+  padding: 0.75em 0;
+  margin: 0 1em;
+  @include media(desktop) {
+    margin: 0 2em;
+  }
+}
