Change feedback link to main GOV.UK feedback form

--- a/_includes/_global-nav.html
+++ b/_includes/_global-nav.html
@@ -9,7 +9,7 @@
       <ul id="navigation">
         <li><a href="/service-manual/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default Service Standard</a></li>
         <li><a href="/service-manual/about" {% if page.section == 'about' %}class="current"{% endif %}>About</a></li>
-        <li><a href="/service-manual/feedback" {% if page.section == 'feedback' %}class="current"{% endif %}>Feedback</a></li>
+        <li><a href="/feedback">Feedback</a></li>
       </ul>
     </nav>
   </div>
