Move page-tools under content
Move styles to separate helper

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -36,6 +36,7 @@
 @import "helpers/_page-header.scss";
 @import "helpers/_page-header-meta.scss";
 @import "helpers/_page-status.scss";
+@import "helpers/_page-tools.scss";
 @import "helpers/_role-links.scss";
 @import "helpers/_tables.scss";
 @import "helpers/_tooltip.scss";
