Adjust hero styles to accomodate adjusted grid mixin

--- a/service-manual/assets/stylesheets/views/_role-index.scss
+++ b/service-manual/assets/stylesheets/views/_role-index.scss
@@ -83,6 +83,9 @@
         display: block;
         background-color: $main-colour;
         text-decoration: none;
+        > *{
+          margin-top: 0;
+        }
         h3, p{
           color: white;
           padding-top: 0;
