--- a/service-manual/assets/stylesheets/views/_phases.scss
+++ b/service-manual/assets/stylesheets/views/_phases.scss
@@ -2,7 +2,9 @@
 // PHASES PAGE
 //
 
+
 .phases {
+  /*
   .phase-diagram {
     width: 100%;
     margin: 0 -1em 0 -1em;
@@ -27,6 +29,49 @@
     .output {
       display: block;
       background-color: $highlight-colour;
+    }
+  }
+  */
+}
+
+// Phases
+.phases-list {
+  list-style: none;  
+  @include ie-lte(7) { 
+    list-style-image: none;
+  }
+  padding: 0;
+
+  li {
+    display: block;
+    padding: 0 0 0.7em $gutter*2.5;
+    margin: 0;
+
+    &:first-child{
+      padding-top: 0.5em;
+    }
+
+
+    &.discovery { background: transparent url(../images/phases-timeline-discovery.png) 0 0 no-repeat }
+    &.alpha     { background: transparent url(../images/phases-timeline-alpha.png) 0 0 no-repeat }
+    &.beta      { background: transparent url(../images/phases-timeline-beta.png) 0 0 no-repeat }
+    &.live      { background: transparent url(../images/phases-timeline-live.png) 0 0 no-repeat }
+
+    p {
+      margin: 0.75em 0;
+      a {
+        @include core-19;
+      }
+    }
+
+    h2 {
+      margin-top: 0;
+      border-bottom: 0;
+    }
+
+    img {
+      margin: 1em 0 0 0;
+      display: none;
     }
   }
 }
