Create phase 'tube-line' effect in CSS
Allows for indefinitely long tube lines. Needs a little work.

--- a/_layouts/phases.html
+++ b/_layouts/phases.html
@@ -15,7 +15,11 @@ section_class: phases
 
   <div class="article-container group">
     <div class="inner">
+      <div class="phases-list">
+        <div class="{{ page.class }}">
       {{ content }}
+        </div>
+      </div>
     </div>
   </div>
 </article>
