--- a/service-manual/assets/stylesheets/views/_phases.scss
+++ b/service-manual/assets/stylesheets/views/_phases.scss
@@ -31,6 +31,10 @@
       background-color: $highlight-colour;
     }
   }
+  //&.discovery { background: transparent url(../images/phases-timeline-discovery.png) 0 0 no-repeat }
+  //&.alpha     { background: transparent url(../images/phases-timeline-alpha.png) 0 0 no-repeat }
+  //&.beta      { background: transparent url(../images/phases-timeline-beta.png) 0 0 no-repeat }
+  //&.live      { background: transparent url(../images/phases-timeline-live.png) 0 0 no-repeat }
   */
 }
 
@@ -41,58 +45,58 @@
     list-style-image: none;
   }
   padding: 0;
-  padding-left: 1em;
+  padding-left: 1.5em;
 
   > * {
     display: block;
-    padding: 0 0 0.7em $gutter*2.5;
+    padding: 0 0 0.7em 2em;
     margin: 0;
     @include core-19;
 
+    // Tube line
+    border-left: dotted 0.6em;
+
+    // Tube station
     &:before{
       content: "";
       display: block;
       border: 0.3em solid;
       background: white;
-      width: 1.5em;
-      margin: 0.5em -5.35em;
+      width: 1.2em;
+      margin: 0.5em -3.2em;
     }
 
     &:first-child{
       padding-top: 0.5em;
       margin-top: 5em;
+
+      // Interchange tube station
       &:before{
         border: 0.6em solid;
-        height: 1.5em;
-        border-radius: 2em;
-        margin: -2.8em -5.65em;
+        height: 1.2em;
+        border-radius: 1.2em;
+        margin: -2.8em -3.45em;
       }
-      h2{
-        margin-top: 0.5em;
+      h3{
+        margin-top: 1em;
       }
     }
 
-
-    //&.discovery { background: transparent url(../images/phases-timeline-discovery.png) 0 0 no-repeat }
-    //&.alpha     { background: transparent url(../images/phases-timeline-alpha.png) 0 0 no-repeat }
-    //&.beta      { background: transparent url(../images/phases-timeline-beta.png) 0 0 no-repeat }
-    //&.live      { background: transparent url(../images/phases-timeline-live.png) 0 0 no-repeat }
-
-    &.discovery {
-      border-left: dotted 0.75em $discovery-colour;
-      &:before{border-color: $discovery-colour;}
+    &.discovery,
+    &.discovery:before {
+      border-color: $discovery-colour;
     }
-    &.alpha {
-      border-left: dotted 0.75em $alpha-colour;
-      &:before{border-color: $alpha-colour;}
+    &.alpha,
+    &.alpha:before {
+      border-color: $alpha-colour;
     }
-    &.beta {
-      border-left: dotted 0.75em $beta-colour;
-      &:before{border-color: $beta-colour;}
+    &.beta,
+    &.beta:before {
+      border-color: $beta-colour;
     }
-    &.live {
-      border-left: dotted 0.75em $live-colour;
-      &:before{border-color: $live-colour;}
+    &.live,
+    &.live:before {
+      border-color: $live-colour;
     }
 
     p {
@@ -102,14 +106,9 @@
       }
     }
 
-    h2 {
+    h3 {
       margin-top: -1em;
       border-bottom: 0;
-    }
-
-    img {
-      margin: 1em 0 0 0;
-      display: none;
     }
   }
 }
