Include breadcrumbs on phases layout

--- a/_layouts/phases.html
+++ b/_layouts/phases.html
@@ -3,6 +3,8 @@ layout: default-wrapper
 section_class: phases
 ---
 
+{% include _breadcrumbs.html %}
+
 <article role="article" class="group">
   <header class="page-header group">
     <hgroup>
