Point global search box at /service-manual/search
Change search button colour to red to imply changed search scope

--- a/service-manual/assets/stylesheets/helpers/_global-nav.scss
+++ b/service-manual/assets/stylesheets/helpers/_global-nav.scss
@@ -2,6 +2,28 @@
 $nav-active: $black;
 $nav-highlight: $border-colour;
 
+#global-header {
+  form#search {
+    input.button {
+      background-color: $main-colour;
+
+      &:hover {
+        background-color: lighten($main-colour, 10%);
+      }
+    }
+
+    @include ie-lte(7) {
+      input.button-active {
+        background-color: lighten($main-colour, 10%);
+      }
+
+      input.button-hover {
+        background-color: lighten($main-colour, 10%);
+      }
+    }
+  }
+}
+
 #global-nav {
   margin: 0 1em;
   border-bottom: $gutter-one-third solid $nav-highlight;
