--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -5,7 +5,7 @@
 
     <a href="#search" class="button search-toggle">Search</a>
 
-    <form id="search" class="site-search" action="/search" method="get" role="search">
+    <form id="search" class="site-search" action="/service-manual/search" method="get" role="search">
       <label for="site-search-text" class="visuallyhidden">Search</label>
       <input type="search" name="q" id="site-search-text" title="Search"><input class="button" type="submit" value="Search">
     </form>
