Add Google search style overrides

--- a/service-manual/assets/stylesheets/main.scss
+++ b/service-manual/assets/stylesheets/main.scss
@@ -53,6 +53,7 @@
 @import "views/_icons.scss";
 @import "views/_phases.scss";
 @import "views/_role-index.scss";
+@import "views/_search.scss";
 @import "views/_standard.scss";
 @import "views/_wide.scss";
 
