Linkify phases headings

--- a/service-manual/assets/stylesheets/views/_phases.scss
+++ b/service-manual/assets/stylesheets/views/_phases.scss
@@ -75,6 +75,15 @@
     h3 {
       margin-top: -1em;
       border-bottom: 0;
+
+      a {
+        color: $text-colour;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 
