--- a/_includes/_phases.html
+++ b/_includes/_phases.html
@@ -1,6 +1,6 @@
 <ul class="phases-list">
   <li class="discovery">
-    <h3>Discovery</h3>
+    <h3><a href="/service-manual/phases/discovery.html">Discovery</a></h3>
 
     <p>A short phase, in which you start researching the needs of your service’s users, find out what you should be measuring, and explore technological or policy-related constraints.</p>
 
@@ -8,7 +8,7 @@
 
   </li>
   <li class="alpha">
-    <h3>Alpha</h3>
+    <h3><a href="/service-manual/phases/alpha.html">Alpha</a></h3>
 
     <p>A short phase in which you prototype solutions for your users needs. You’ll be testing with a small group of users or stakeholders, and getting early feedback about the design of the service.</p>
 
@@ -16,7 +16,7 @@
 
   </li>
   <li class="beta">
-    <h3>Beta</h3>
+    <h3><a href="/service-manual/phases/beta.html">Beta</a></h3>
 
     <p>You’re developing against the demands of a live environment, understanding how to build and scale while meeting user needs. You’ll also be releasing a version to test in public.</p>
 
@@ -24,7 +24,7 @@
 
   </li>
   <li class="live">
-    <h3>Live</h3>
+    <h3><a href="/service-manual/phases/live.html">Live</a></h3>
 
     <p>The work doesn’t stop once your service is live. You’ll be iteratively improving your service, reacting to new needs and demands, and meeting targets set during its development.</p>
 
