--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -121,6 +121,15 @@
     h2 {
       margin-top: 0;
       // @include bold-36;
+
+      a {
+        color: $text-colour;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 
