--- a/service-manual/assets/stylesheets/helpers/_caveat-notice.scss
+++ b/service-manual/assets/stylesheets/helpers/_caveat-notice.scss
@@ -5,7 +5,7 @@
 #caveat-notice {
   background-color: #D5E8F3;
   padding: 0.5em 0;
-  margin: 0 auto;
+  margin: 0 2em;
 
   @include ie-lte(6) {
     width: 960px;
