Add guide index to global nav
This helps to emphaise the sibling relationship between the standard and the guides.
Also made the 'about' link more explicit

--- a/_includes/_global-nav.html
+++ b/_includes/_global-nav.html
@@ -7,8 +7,9 @@
 
     <nav role="navigation" class="content">
       <ul id="navigation">
-        <li><a href="/service-manual/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>Digital by Default Service Standard</a></li>
-        <li><a href="/service-manual/about" {% if page.section == 'about' %}class="current"{% endif %}>About</a></li>
+        <li><a href="/service-manual/digital-by-default" {% if page.section == 'dbd' %}class="current"{% endif %}>The standard</a></li>
+        <li><a href="/service-manual/browse" {% if page.section == 'browse' %}class="current"{% endif %}>The guides</a></li>
+        <li><a href="/service-manual/about" {% if page.section == 'about' %}class="current"{% endif %}>About this site</a></li>
         <li><a href="/feedback">Feedback</a></li>
       </ul>
     </nav>
