--- a/service-manual/assets/stylesheets/views/_home-page.scss
+++ b/service-manual/assets/stylesheets/views/_home-page.scss
@@ -5,10 +5,9 @@
 .js-enabled .search-the-manual label {
 float: none;
 position: absolute;
-z-index: -1;
 width: 22em;
 margin-right: 0;
-background-color: #F9F9F9;
+background-color: white;
 padding: 0.2em 0 0 0.3em;
 }
 
@@ -25,7 +24,7 @@ padding: 0.2em 0 0 0.3em;
   }
 
   .intro{
-    margin: 2em 0em 0 0;
+    margin: 3em 0em 0 0;
     padding: 11em 11em 2em 12em;
     background: url("/service-manual/assets/images/DbD-kitemark.png") no-repeat center top;
     background-size: 62%;
@@ -52,11 +51,13 @@ padding: 0.2em 0 0 0.3em;
   }
 
   .search-the-manual{
+    background: $highlight-colour;
     border-top: 5px solid $main-colour;
-    margin: 0 2em 2em 2em;
-    padding: 4em 0 0 10em;
+    margin: 0 2em;
+    padding: 4em 0 1em 10em;
 
     .submit{
+      position: relative;
       border: 0;
       height: 46px;
       width: 46px;
@@ -78,6 +79,7 @@ padding: 0.2em 0 0 0.3em;
       padding: 0.5em;
     }
     input[type="search"]{
+      position: relative;
       background-color: transparent;
       border: 2px inset;
       font-size: 27px;
@@ -88,7 +90,7 @@ padding: 0.2em 0 0 0.3em;
 
     #site-search-text.focus,
     #site-search-text:focus{
-      background-color: #F9F9F9;
+      background-color: white;
     }
 
   }
