Apply new layouts to index and phase pages

--- a/_layouts/default-wrapper.html
+++ b/_layouts/default-wrapper.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 9]><html class="lte-ie8 " lang="en"><![endif]-->
 <!--[if gt IE 8]><!--><html lang="en" class=""><!--<![endif]-->
 <head>
-  {% include _head.html %}
+  {% include _head.local.html %}
 
 </head>
 <body class="mainstream full-width {{ page.section }}">
