--- a/service-manual/assets/stylesheets/helpers/_link-list.scss
+++ b/service-manual/assets/stylesheets/helpers/_link-list.scss
@@ -44,6 +44,7 @@
       color: $secondary-text-colour;
       text-decoration: none;
       margin: 0;
+      width: 65%;
 
       @include media(desktop) {
         display: inline-block;
